@@ -47,7 +47,6 @@ import org.apache.kafka.coordinator.group.generated.OffsetCommitKey;
 import org.apache.kafka.coordinator.group.generated.OffsetCommitValue;
 import org.apache.kafka.coordinator.group.metrics.GroupCoordinatorMetrics;
 import org.apache.kafka.coordinator.group.metrics.GroupCoordinatorMetricsShard;
-import org.apache.kafka.image.MetadataDelta;
 import org.apache.kafka.image.MetadataImage;
 import org.apache.kafka.timeline.SnapshotRegistry;
 import org.apache.kafka.timeline.TimelineHashMap;
@@ -56,7 +55,6 @@ import org.apache.kafka.timeline.TimelineHashSet;
 import org.slf4j.Logger;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -169,11 +167,6 @@ public class OffsetMetadataManager {
     private final Time time;
 
     /**
-     * The metadata image.
-     */
-    private MetadataImage metadataImage;
-
-    /**
      * The group metadata manager.
      */
     private final GroupMetadataManager groupMetadataManager;
@@ -284,7 +277,6 @@ public class OffsetMetadataManager {
         this.snapshotRegistry = snapshotRegistry;
         this.log = logContext.logger(OffsetMetadataManager.class);
         this.time = time;
-        this.metadataImage = metadataImage;
         this.groupMetadataManager = groupMetadataManager;
         this.config = config;
         this.metrics = metrics;
@@ -498,8 +490,7 @@ public class OffsetMetadataManager {
                         request.groupId(),
                         topic.name(),
                         partition.partitionIndex(),
-                        offsetAndMetadata,
-                        metadataImage.features().metadataVersion()
+                        offsetAndMetadata
                     ));
                 }
             });
@@ -558,8 +549,7 @@ public class OffsetMetadataManager {
                         request.groupId(),
                         topic.name(),
                         partition.partitionIndex(),
-                        offsetAndMetadata,
-                        metadataImage.features().metadataVersion()
+                        offsetAndMetadata
                     ));
                 }
             });
@@ -808,7 +798,7 @@ public class OffsetMetadataManager {
         } catch (GroupIdNotFoundException ex) {
             return new OffsetFetchResponseData.OffsetFetchResponseGroup()
                 .setGroupId(request.groupId())
-                .setTopics(Collections.emptyList());
+                .setTopics(List.of());
         }
 
         final List<OffsetFetchResponseData.OffsetFetchResponseTopics> topicResponses = new ArrayList<>();
@@ -1109,16 +1099,6 @@ public class OffsetMetadataManager {
         } else {
             log.debug("Aborted transactional offset commits for producer id {}.", producerId);
         }
-    }
-
-    /**
-     * A new metadata image is available.
-     *
-     * @param newImage  The new metadata image.
-     * @param delta     The delta image.
-     */
-    public void onNewMetadataImage(MetadataImage newImage, MetadataDelta delta) {
-        metadataImage = newImage;
     }
 
     /**
